Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40541

ibus-hangul <Space> and <Enter> keys problems on Qt5 applications

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • None
    • 5.3.1
    • None
    • a1bfa3965102972323a1f6407036df3f65dcce2c

    Description

      Please see the ibus bug.
      http://code.google.com/p/ibus/issues/detail?id=1726

      I noticed QT provides libibusplatforminputcontextplugin.so and the "ProcessKeyEvent" DBus method is used as sync mode.
      When ibus-hangul has a preedit text with a Hangul string and type Space or Enter key, "CommitText" DBus method is sent with the Hangul string during "ProcessKeyEvent" DBus method is called with Space or Enter. But since "ProcessKeyEvent" is sync mode, "ProcessKeyEvent" finishes before "CommitText" finishes.

      I'm thinking now async "ProcessKeyEvent" is the solution to fix this. Maybe ibus-qt is light-weight and does not have this issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            fujiwara Fujiwara
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes